<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:backgroundTint="@color/gray"
    android:orientation="vertical"
    android:weightSum="3">

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:ems="10"
        android:fontFamily="@font/orbitron"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:fontFamily="@font/orbitron"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="@font/orbitron"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/viewCustom"
        android:layout_below="@id/btn_login"
        android:clickable="true"
        android:fontFamily="@font/orbitron"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="@font/orbitron"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>